tests/error/15.desc
Compilation error - invalid bool expression