tests/error/15.out
Parser: сompilation error - syntax error, unexpected ')', expecting '=' or '!' or '<' or '>' near line 3
